tests/baselines/reference/binaryArithmatic1.errors.txt
tests/cases/compiler/binaryArithmatic1.ts(1,13): error TS2531: Object is possibly 'null'.


==== tests/cases/compiler/binaryArithmatic1.ts (1 errors) ====
    var v = 4 | null;
                ~~~~
!!! error TS2531: Object is possibly 'null'.